--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,7 +5,8 @@
     "pages/index/itemList/itemDetail/index",
     "pages/index/arrange/index",
     "pages/index/uploadFile/index",
-    "pages/index/openData/index"
+    "pages/index/openData/index",
+    "pages/index/testPage/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
